--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -293,6 +293,16 @@ p {
 	margin-top: 15vw;
 }
 
+@-moz-document url-prefix(){
+	p {
+	font-family: Inconsolata, source code pro, consolas, monospace;
+	font-size: 3.5vw;
+	font-weight: bold;
+	width: 100%;
+	margin-top: 9vw;
+}
+}
+
 .icon-cards {
 	position: relative;
 	width: 60vw;
@@ -313,11 +323,15 @@ p {
 	transform-style: preserve-3d;
 	transform: translateZ(-30vw) rotateY(0);
 	-webkit-animation: carousel 10s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
+	-moz-animation: carousel 10s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
+	-o-animation: carousel 10s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
 	animation: carousel 10s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
 }
 
 .icon-cards__content.step-animation {
 	-webkit-animation: carousel 8s infinite steps(1) forwards;
+	-moz-animation: carousel 8s infinite steps(1) forwards;
+	-o-animation: carousel 8s infinite steps(1) forwards;
 	animation: carousel 8s infinite steps(1) forwards;
 }
 
@@ -511,6 +525,9 @@ p {
 @media (min-width: 414px) {
 	.contact main section .content-contact {
 		text-align: -webkit-center;
+		text-align: -moz-center;
+		text-align: -o-center;
+
 	}
 }
 
